--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "sweetalert2": "^11.19.1",
     "sweetalert2-react-content": "^5.1.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
