--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.4",
     "animate.css": "^4.1.1",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "sweetalert2": "^11.19.1",
     "sweetalert2-react-content": "^5.1.0",
     "tailwind-scrollbar-hide": "^2.0.0",
