--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.16.0",
     "sweetalert2": "^11.19.1",
     "sweetalert2-react-content": "^5.1.0",
